# ihmc-java-ros2-communication

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  group.gradle.properties  product.properties  publish.sh  readme.md  settings.gradle  settings.gradle.kts
docs/: Making a release.md
ihmc-ros2-library/: build.gradle  build.gradle.kts  gradle.properties  readme.md  settings.gradle
ros2-common-interfaces/: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
ros2-common-interfaces/src/main/resources/: msg.ros1.em
ros2-msg-to-idl-generator/: build.gradle  build.gradle.kts  gradle.properties  pom.xml  settings.gradle
ros2-msg-to-idl-generator/src/main/python/: ros2_msg_ros1_msg.py  ros2_msg_to_idl.py
ros2-msg-to-idl-generator/src/main/resources/: msg.idl.em  msg.ros1.em
ros2-msg-to-idl-generator/src/test/java/: TestGenerateIDL.java  TestGenerateMSGToIDL.java  TestGenerateRos2MsgToRos1Msg.java
ros2-msg-to-idl-generator/src/test/ros_msgs/: package.xml
ros2-msg-to-idl-generator/src/test/ros_msgs/msg/: Num.msg
ros2-msg-to-pubsub-generator/: build.gradle  build.gradle.kts  gradle.properties  readme.md  settings.gradle  settings.gradle.kts
rosidl-typesupport-ihmcpubsub-java/: .gitignore  arguments.json  build.gradle  gradle.properties  pom.xml  settings.gradle
rosidl-typesupport-jython/: arguments.json  build.gradle  gradle.properties  pom.xml  readme.md  settings.gradle
src/main/generated-idl/: Num_.idl
src/main/python/: ros2_msg_to_idl.py  test.json
(+613 files in other folders)
