<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros_msgs</name>
  <version>0.0.1</version>
  <description>A package containing messages consumed by the IHMC controller.</description>
  <maintainer email="nmertins@ihmc.us">Nathan Mertins</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
